--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,37 @@
 .App {
   text-align: center;
 }
+.mobile-container{
+  position: relative;
+  width: 500px;
+  margin: 2rem auto;
+  border-radius: 10px;
+  box-shadow: 0 0 5px #b5b5b5;
+  height: 800px;
+  padding: 1rem 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.v-flex{
+  display: flex;
+  flex-direction: column;
+}
+.flex{
+  display: flex;
+  align-items: center;
+}
+
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.img-fit{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media (prefers-reduced-motion: no-preference) {
