--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+*{
+  text-decoration: none !important;
+}
 .mobile-container{
   position: relative;
   width: 500px;
