--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,10 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0.5rem 0 2rem 0;
+    background-color: white;
+
 }
 .header .logo{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     background-color: aquamarine;
     border-radius: 10px;
 }
